feat: added ExpectedSolveTime to Challenges

--- a/src/GZCTF/ClientApp/src/locales/en-US/admin.json
+++ b/src/GZCTF/ClientApp/src/locales/en-US/admin.json
@@ -145,6 +145,14 @@
           "description": "Min score: {{min_score}}pts",
           "label": "Minimum Score Ratio"
         },
+        "expected_time": {
+          "label": "Expected Solve Time",
+          "description": "Solve before this time to receive the full dynamic score.",
+          "date": "Due Date",
+          "time": "Due Time",
+          "timezone_hint": "Times are displayed in Beijing time (UTC+8).",
+          "score_hint": "After the deadline, each solve awards {{score}} pts (the smaller of 60% or the minimum score)."
+        },
         "score": "Score",
         "service_port": {
           "description": "Port of container services",
