--- a/src/GZCTF/ClientApp/src/locales/en-US/challenge.json
+++ b/src/GZCTF/ClientApp/src/locales/en-US/challenge.json
@@ -19,6 +19,9 @@
     },
     "submit_flag": "Submit Flag"
   },
+  "card": {
+    "expected_time": "Expected: {{time}} ({{timezone}})"
+  },
   "category": {
     "ai": "AI security",
     "blockchain": "Blockchain",
