--- a/src/GZCTF/ClientApp/src/locales/zh-CN/admin.json
+++ b/src/GZCTF/ClientApp/src/locales/zh-CN/admin.json
@@ -151,6 +151,7 @@
           "date": "应完成日期",
           "time": "应完成时间",
           "timezone_hint": "时间均按北京时间 (UTC+8) 计算。",
+          "list": "应完成：{{time}}（{{timezone}}）",
           "score_hint": "超过应完成时间后，解题固定获得 {{score}} 分（60% 分值与最低分值中的较小值）。"
         },
         "score": "题目分值",
