feat: the scoreboard can ben exported into an excel file now.

--- a/src/GZCTF/ClientApp/src/locales/en-US/admin.json
+++ b/src/GZCTF/ClientApp/src/locales/en-US/admin.json
@@ -43,6 +43,7 @@
       },
       "copy_public_key": "Copy Public Key",
       "delete": "Delete",
+      "export_scoreboard": "Export Scoreboard",
       "new": "New Game"
     },
     "notices": {
