--- a/src/GZCTF/ClientApp/src/locales/zh-CN/admin.json
+++ b/src/GZCTF/ClientApp/src/locales/zh-CN/admin.json
@@ -8,6 +8,7 @@
         "uploading": "上传中……"
       },
       "bonus": "三血奖励",
+      "copy_from_game": "复制赛题",
       "delete": "删除题目",
       "disable": "禁用题目",
       "edit": "编辑题目",
@@ -154,6 +155,19 @@
           "timezone_hint": "时间均按北京时间 (UTC+8) 计算。",
           "list": "应完成：{{time}}（{{timezone}}）",
           "score_hint": "超过应完成时间后，解题固定获得 {{score}} 分（60% 分值与最低分值中的较小值）。"
+        },
+        "copy": {
+          "title": "复制赛题",
+          "source_label": "源赛事",
+          "source_placeholder": "选择一个赛事",
+          "challenge_label": "赛题列表",
+          "challenge_placeholder": "选择要复制的赛题",
+          "copy_all": "复制全部赛题",
+          "no_games": "暂无可用赛事",
+          "no_challenges": "该赛事暂无赛题",
+          "confirm": "复制",
+          "select_warning": "请选择至少一个赛题或勾选复制全部",
+          "source_required": "请先选择源赛事"
         },
         "score": "题目分值",
         "service_port": {
@@ -410,7 +424,8 @@
           "attachment_downloaded": "假装附件已经下载了！",
           "flag_submitted": "flag 似乎被正确提交了！"
         },
-        "updated": "题目已更新"
+        "updated": "题目已更新",
+        "copied": "赛题复制完成"
       },
       "created": "比赛已创建",
       "info": {
