--- a/src/GZCTF/ClientApp/src/locales/zh-CN/common.json
+++ b/src/GZCTF/ClientApp/src/locales/zh-CN/common.json
@@ -6,6 +6,7 @@
     "uploading": "正在上传头像"
   },
   "button": {
+    "cancel": "取消",
     "copy": "复制到剪贴板",
     "reset": "重置",
     "retry": "重试",
@@ -58,6 +59,7 @@
       "recent_games": "近期比赛"
     },
     "no_data": "没有数据",
+    "loading": "加载中...",
     "report_error": "如果你认为这是一个异常错误，请联系管理员",
     "wider": {
       "text": "请使用更宽的设备浏览本页面",
