feat: The admin can hide a team now

--- a/src/GZCTF/ClientApp/src/locales/en-US/game.json
+++ b/src/GZCTF/ClientApp/src/locales/en-US/game.json
@@ -185,6 +185,7 @@
   "participation": {
     "actions": {
       "accepted": "Approved",
+      "hidden": "Hidden",
       "pending": "Pending review",
       "rejected": "Re-Sign Up",
       "suspended": "Banned",
@@ -215,6 +216,7 @@
     },
     "status": {
       "accepted": "Approved",
+      "hidden": "Hidden",
       "pending": "Pending",
       "rejected": "Rejected",
       "suspended": "Banned"
